Ensured no word overflow

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,12 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 }
 
 h2 {
-    font-size: calc(2rem + 1.5vw);
+    font-size: calc(1.5rem + 1.5vw);
+    background-color: black;
+    color: white;
+    width: 80%;
+    margin: 0 auto;
+    height: 50px;
 }
 
 h3 {
@@ -30,8 +35,22 @@ textarea {
     text-align: left;
 }
 
-h6, label, input, textarea, button, div {
+input, textarea {
+    border: 2px solid black;
+    margin-top: 10px;
+}
+
+label, input, textarea, button, div {
     font-size: calc(1.5rem + 1vw);
+}
+
+h6 {
+    font-size: calc(1rem + 1vw);
+    width: calc(50% + 0.5vw);
+    margin: 0 auto;
+    color: white;
+    background-color: black;
+    padding: 5px 10px;
 }
 
 p {
@@ -42,15 +61,23 @@ button {
     width: 200px;
     height: 100px;
     margin-top: 20px;
+    border: 2px solid black;
+    background-color:  #993333;
 }
 
 label {
     background-color: white;
+    border: 2px solid black;
+    padding: 2px 10px;
     margin-right: 20px;
 }
 
 .textHeader {
-    font-size: calc(3rem + 2vw);
+    font-size: calc(2.5rem + 2vw);
+    text-transform: uppercase;
+    background-color:  #993333;
+    color: white;
+
 }
 
 .app {
@@ -58,14 +85,19 @@ label {
 }
 
 .formSection {
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 .formOne, .formTwo {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
+}
+
+.formOne {
+    margin-top: 20px;
 }
 
 .notesSection {
@@ -73,19 +105,24 @@ label {
 }
 
 .notes {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .noteTitle {
     width: 50%;
-    margin: 0 auto;
+    margin: 0 auto 5px auto;
+    padding-bottom: 20px;
     background-color: lightgrey;
+    border: 2px solid black;
 }
 
 .noteText {
     width: 75%;
-    margin: 0 auto;
-    background-color: lightslategray;
+    margin: 0 auto 50px auto;
+    background-color: white;
+    border: 2px solid black;
+    word-wrap: break-word;
+    padding: 15px 10px;
 }
 
 .removeNote {
